[package]
name = "sun-status-grabber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
clap = { version = "4.3.1", default-features = false, features = ["std", "env"] }
lazy_static = "1.4.0"
regex = "1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
ureq = { version = "2.6.2", default-features = false }
url = "2.3.1"

[dev-dependencies]
temp-env = "0.3.4"

[profile.release]
# strip=true
lto=true
